[tool.poetry]
name = "rate-limiter"
version = "0.1.0"
description = "Custom rate limiter"
authors = ["himalayanegi10 <himalayanegi10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
redis = {extras = ["hiredis"], version = "^5.0.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
